# Neural

./: .gitignore  API-KEY  PLAN.md  README.md  c-run.json  my-run.json  pyproject.toml
docs/: ARCHITECTURE.md  SETUP.md  config.cwe-example.json  config.example.json
results/c-run/: cert_rule_map.json  findings.db  report.csv  report.html  report.json  transcript-20260712-230835.jsonl  transcript-20260712-232943.jsonl  transcript-20260712-235552.jsonl  transcript-20260713-004550.jsonl  transcript-20260713-005510.jsonl  transcript-20260713-010309.jsonl  transcript-20260713-010753.jsonl  transcript-20260713-021303.jsonl  transcript-20260713-212134.jsonl
sectool/: __init__.py  cli.py  config.py  context.py  context_tools.py  dispatcher.py  events.py  interactive.py  preflight.py  report.py  review.py  run_manifest.py  scorer.py  security_rules.py  ui.py
sectool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sectool/findings/: __init__.py  schema.py  store.py  tasks.py
sectool/graphify-out/: .graphify_analysis.json  graph.json  manifest.json
sectool/models/: __init__.py  anthropic_adapter.py  base.py  ollama_adapter.py  openai_adapter.py  (+1 more)
tests/: test_application.py  test_cert_mapping.py  test_context.py  test_dispatcher.py  test_events.py  test_feedback.py  test_interactive.py  test_model_adapters.py  test_patch.py  test_pipeline_hardening.py  test_preflight.py  test_prompt.py  test_run_manifest.py  test_scanner_events.py  test_scanner_parsing.py  test_schema.py  test_scorer.py  test_store.py  test_tasks.py  test_transcript.py  test_ui.py  test_verifier_events.py
(+3582 files in other folders)
