[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sectool"
version = "0.1.0"
description = "Reproducible CodeChecker + LLM evaluation for C/C++ CWE and CERT security repair"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "requests>=2.31",
    "jinja2>=3.1",
    "rich>=13.0",
    "questionary>=2.0",
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
sectool = "sectool.cli:main"

[tool.setuptools.packages.find]
include = ["sectool*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
